<resources>
    <string name="app_name">DoItNow</string>
    <string name="main_fragment_title">My tasks</string>
    <string name="completed_title">Completed - %1$d</string>
    <string name="info_about_item">InfoAboutItem</string>
    <string name="info_data">Do id before %1$s</string>
    <string name="save_button">Save</string>
    <string name="create_button">Create</string>
    <string name="importance_title_text">Importance</string>
    <string name="importance_text_menu">No</string>
    <string name="do_before_title">Do before</string>
    <string name="data_sample">2 JUNE 2023</string>
    <string name="delete_button">Delete</string>
    <string name="enter_your_task_hint">Enter your task</string>
    <string name="delete_image_desc">Delete image</string>
    <string name="no_title">No</string>
    <string name="low_title">Low</string>
    <string name="high_title">!!\ High</string>
    <string name="create_new_task_fab">Create new task fab</string>
    <string name="merging_data">Merging data…</string>
    <string name="available_network_state">Connected! Merging data…</string>
    <string name="unavailable_network_state">Internet unavailable! Work offline</string>
    <string name="no_internet_try_later">No internet connection, retry later :c</string>
    <string name="losing_network_state">Losing Internet!</string>
    <string name="lost_network_state">Internet Lost!</string>
    <string name="error_enter_tasks_text">Enter some words!</string>
    <string name="unavailable_network_state_delete_later">No network, will delete later. Continue offline.</string>
    <string name="unavailable_network_state_update_later">No network, will update later. Continue offline.</string>
    <string name="unavailable_network_state_create_later">No network, will create later. Continue offline.</string>
    <string name="loading_failed_showing_local_data">Something went wrong, showing local data</string>
    <string name="login_title">LOGIN</string>
    <string name="icon_application">Icon application</string>
    <string name="enter_email">Enter email</string>
    <string name="forgot_password">Fogot password?</string>
    <string name="enter_password">Enter password</string>
    <string name="guest_mode_button">Guest mode</string>
    <string name="you_want_get_out">Are you sure you want to get out?</string>
    <string name="you_want_get_out_offline">Are you sure you want to get out? Offline mode data loss is possible.</string>
    <string name="logout_button">Log out</string>
    <string name="add_task_button_recycler">Add task</string>
    <string name="welcome_title">Welcome!</string>
    <string name="login_disc">Log in with Yandex ID or use guest mode</string>
    <string name="guest_mode_button_disc">Guest mode button</string>
    <string name="yandex_id_button_disc">Yandex id button</string>
    <string name="yandex_id_button">Sign in with Yandex ID</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="app_theme_title">Application theme</string>
    <string name="choose_theme_title">Choose theme</string>
    <string name="key_theme">theme_option</string>
    <string name="hour_before_task">Hour before task!</string>
    <string name="postpone_for_a_day">Postpone for a day</string>
    <string name="notification_text">Your notification is %1$s and importance is %2$s</string>
    <string name="allow_notifications_dialog_title">Do you allow notifications to be displayed?</string>
    <string name="value_temp">Value</string>
    <string name="allow_notification_setting_title">Allow notification</string>
    <string name="manage_fragment_title">Manage fragment</string>
    <string name="allow_notification_dialog_body">The notifications will show you the text of the task and its importance. Also, by clicking on it, you can proceed to editing.</string>
    <string name="allow_button">Allow</string>
    <string name="deny_button">Deny</string>
    <string name="cancel_deleting">Cancel deleting a task: %1$s?</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="select_time_time_picker_tittle">"Select Time "</string>
    <string name="enter_time_time_picker_tittle">Enter Time</string>


</resources>