<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tasks_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/color_dark_blue"
            android:text="@string/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_app" />

        <ImageView
            android:id="@+id/icon_app"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/icon_application"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/guest_mode_button"
            android:textColor="@color/color_dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/yandex_auth_button"
            app:layout_constraintTop_toTopOf="@+id/yandex_auth_button" />

        <ImageView
            android:id="@+id/yandex_auth_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="left"
            android:layout_marginStart="32dp"
            android:layout_marginTop="152dp"
            android:importantForAccessibility="no"
            android:src="@drawable/button_yandexid"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_app"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
