<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.fragments.NewEditTaskFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/close"
        app:navigationIconTint="?attr/colorOnSecondary">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="#00000000"
            android:text="@string/save_button"
            android:textColor="@color/color_light_blue"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.MaterialToolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp">


            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/tasks_background"
                android:elevation="2dp"
                android:gravity="top|start"
                android:hint="@string/enter_your_task_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:padding="8dp"
                android:textColorHint="?attr/colorOnPrimary"
                android:textCursorDrawable="?attr/colorOnPrimary"
                android:textSize="@dimen/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/menu_importance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text">

                <TextView
                    android:id="@+id/text_importance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:gravity="start"
                    android:text="@string/importance_title_text"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <TextView
                    android:id="@+id/text_importance_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importance_text_menu"
                    android:textColor="@color/color_light_gray"
                    android:textSize="@dimen/body" />

            </LinearLayout>

            <View
                android:id="@+id/short_separator_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@color/color_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_importance" />

            <TextView
                android:id="@+id/textview_do_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:text="@string/do_before_title"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/short_separator_line" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_data_visible"
                android:layout_width="76dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:gravity="top"
                android:theme="@style/Switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textview_do_before" />

            <TextView
                android:id="@+id/textview_date_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/data_sample"
                android:textColor="@color/color_light_blue"
                android:textSize="@dimen/body"
                android:visibility="invisible"
                app:drawableStartCompat="@drawable/calendar"
                app:drawableTint="@color/color_light_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_do_before" />

            <View
                android:id="@+id/end_separator_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_light_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_data_visible" />


            <TextView
                android:id="@+id/button_delete_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="12dp"
                android:padding="5dp"
                android:text="@string/delete_button"
                android:textColor="@color/color_light_gray"
                android:textSize="@dimen/title"
                app:drawableLeftCompat="@drawable/delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_separator_line" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>